window: Show restore button in fullscreen
Instead of close button.

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -33,6 +33,8 @@
       <object class="EditorFullscreenBox" id="fullscreen_box">
         <child type="top">
           <object class="AdwHeaderBar" id="header_bar">
+            <property name="show-start-title-buttons" bind-source="EditorWindow" bind-property="fullscreened" bind-flags="sync-create|invert-boolean"/>
+            <property name="show-end-title-buttons" bind-source="EditorWindow" bind-property="fullscreened" bind-flags="sync-create|invert-boolean"/>
             <property name="title-widget">
               <object class="GtkBox">
                 <property name="hexpand">true</property>
@@ -108,6 +110,14 @@
                 <property name="action-name">session.new-draft</property>
                 <property name="icon-name">tab-new-symbolic</property>
                 <property name="tooltip-text" translatable="yes">New Tab</property>
+              </object>
+            </child>
+            <child type="end">
+              <object class="GtkButton" id="restore_button">
+                <property name="tooltip-text" translatable="yes">Leave Fullscreen</property>
+                <property name="icon-name">view-restore-symbolic</property>
+                <property name="action-name">win.unfullscreen</property>
+                <property name="visible" bind-source="EditorWindow" bind-property="fullscreened" bind-flags="sync-create"/>
               </object>
             </child>
             <child type="end">
