--- a/src/editor-properties-panel.ui
+++ b/src/editor-properties-panel.ui
@@ -8,6 +8,7 @@
             <child>
               <object class="AdwActionRow" id="name">
                 <property name="title" translatable="yes">File Name</property>
+                <property name="subtitle-selectable">True</property>
                 <binding name="subtitle">
                   <lookup name="name">properties</lookup>
                 </binding>
@@ -17,7 +18,7 @@
                 <property name="use-markup">False</property>
                 <style>
                   <class name="property"/>
-                </style>
+                </style>x
               </object>
             </child>
             <child>
