properties: Make filename selectable
This really looks like it should be. Possibly even with a copy button, but
that's a separate problem.

--- a/src/editor-properties-panel.ui
+++ b/src/editor-properties-panel.ui
@@ -8,6 +8,7 @@
             <child>
               <object class="AdwActionRow" id="name">
                 <property name="title" translatable="yes">File Name</property>
+                <property name="subtitle-selectable">True</property>
                 <binding name="subtitle">
                   <lookup name="name">properties</lookup>
                 </binding>
