--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -12,6 +12,7 @@
         <child>
           <object class="AdwToolbarView" id="toolbar_view">
             <property name="vexpand">true</property>
+            <property name="bottom-bar-style">raised</property>
             <child>
               <object class="GtkOverlay" id="overlay">
                 <property name="vexpand">true</property>
@@ -76,50 +77,61 @@
               </object>
             </child>
             <child type="bottom">
-              <object class="GtkBox" id="goto_line_bar">
-                <property name="spacing">6</property>
-                <property name="halign">center</property>
-                <style>
-                  <class name="toolbar"/>
-                </style>
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkLabel">
-                    <property name="label" translatable="yes">Go to Line</property>
-                    <property name="margin-start">3</property>
-                    <property name="margin-end">3</property>
-                    <property name="halign">start</property>
-                    <attributes>
-                      <attribute name="weight" value="bold"/>
-                    </attributes>
+                  <object class="GtkRevealer" id="goto_line_revealer">
+                    <property name="reveal-child">False</property>
+                    <property name="transition-type">slide-up</property>
+                    <property name="child">
+                      <object class="GtkBox">
+                        <property name="halign">center</property>
+                        <style>
+                          <class name="toolbar"/>
+                        </style>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label" translatable="yes">Go to Line</property>
+                            <property name="margin-start">3</property>
+                            <property name="margin-end">3</property>
+                            <style>
+                              <class name="heading"/>
+                            </style>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkEntry" id="goto_line_entry">
+                            <property name="width-chars">3</property>
+                            <property name="max-width-chars">7</property>
+                            <signal name="activate" handler="goto_line_entry_activate_cb" swapped="true"/>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="goto_line_button">
+                            <property name="label" translatable="yes">Go</property>
+                            <property name="width-request">50</property>
+                            <property name="action-name">page.goto-line</property>
+                            <style>
+                              <class name="suggested-action"/>
+                            </style>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
                   </object>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="goto_line_entry">
-                    <property name="width-chars">3</property>
-                    <property name="max-width-chars">7</property>
-                    <signal name="activate" handler="goto_line_entry_activate_cb" swapped="true"/>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkButton" id="goto_line_button">
-                    <property name="label" translatable="yes">Go</property>
-                    <property name="width-request">50</property>
-                    <property name="action-name">page.goto-line</property>
-                    <style>
-                      <class name="suggested-action"/>
-                    </style>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child type="bottom">
-              <object class="AdwClamp" id="search_clamp">
-                <property name="maximum-size">500</property>
-                <child>
-                  <object class="EditorSearchBar" id="search_bar">
-                    <style>
-                      <class name="toolbar"/>
-                    </style>
+                  <object class="GtkRevealer" id="search_revealer">
+                    <property name="reveal-child">False</property>
+                    <property name="transition-type">slide-up</property>
+                    <property name="child">
+                      <object class="AdwClamp">
+                        <property name="maximum-size">500</property>
+                        <property name="child">
+                          <object class="EditorSearchBar" id="search_bar"/>
+                        </property>
+                      </object>
+                    </property>
                   </object>
                 </child>
               </object>
