editor-search-bar: Add GtkButton:can-shrink
Allow the "Replace" and "Replace All" buttons to
shrink, which is useful when the window width is small
(and if button labels length is longer, something that
can happen in different translations).

--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -134,6 +134,7 @@
                 <property name="label" translatable="yes">_Replace</property>
                 <property name="visible">false</property>
                 <property name="focus-on-click">false</property>
+                <property name="can-shrink">True</property>
                 <layout>
                   <property name="row">1</property>
                   <property name="column">1</property>
@@ -147,6 +148,7 @@
                 <property name="label" translatable="yes">Replace _All</property>
                 <property name="visible">false</property>
                 <property name="focus-on-click">false</property>
+                <property name="can-shrink">True</property>
                 <layout>
                   <property name="row">1</property>
                   <property name="column">2</property>
