properties-panel: work around subtitle styling with disabled action
The disabled action will cause "Draft" to get dimmed but no the action
representative icon. That is sort of the opposite of what we want. Property
text should be legible and the icon dimmed will indicate that it cannot
have action taken upon it (as well as not highlighting on hover).

Fixes: #768

--- a/src/style.css
+++ b/src/style.css
@@ -154,3 +154,8 @@ page positionlabel {
 page positionlabel:backdrop {
   opacity: 0.7;
 }
+
+/* Always show "Location" row subtitle w/o desenstized visuals */
+row.location.property .subtitle {
+  filter: none;
+}
