--- a/src/editor-properties-panel.ui
+++ b/src/editor-properties-panel.ui
@@ -36,13 +36,14 @@
                 <property name="use-markup">False</property>
                 <property name="subtitle-lines">1</property>
                 <child type="suffix">
-                  <object class="GtkImage">
+                  <object class="GtkImage" id="open_image">
                     <property name="icon-name">document-open-symbolic</property>
                     <property name="valign">center</property>
                     <property name="margin-start">6</property>
                   </object>
                 </child>
                 <style>
+                  <class name="location"/>
                   <class name="property"/>
                 </style>
               </object>
