search-entry: Allow it being recognized by Orca
Also, add labels to it and the replace entry as well.

This makes Orca aware about the wo entries and they're always read when
in the search bar, focusing them has some issues, so the search entry is not
always repored (GTK for some reason does not send the focus event).

Fixes #771.

--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -34,6 +34,9 @@
                 <property name="hexpand">true</property>
                 <property name="visible">false</property>
                 <property name="placeholder-text" translatable="yes">Replace</property>
+                <accessibility>
+                  <property name="label" translatable="yes">Replace</property>
+                </accessibility>
                 <layout>
                   <property name="row">1</property>
                   <property name="column">0</property>
